[metadata]
name = nodezator
version = 1.2.3
author = Kennedy Richard
author_email = kennedy@kennedyrichard.com
description = multi-purpose visual editor to connect Python functions visually (a node editor)
keywords = gui, desktop, application, pygame, graph, graphs, nodes, node, editor
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://nodezator.com
project_urls =
    Source = https://github.com/IndiePython/nodezator
    Bug Tracker = https://github.com/IndiePython/nodezator/issues
    Funding = https://indiepython.com/donate
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: User Interfaces
    Topic :: Artistic Software
    Topic :: Desktop Environment
    Topic :: Multimedia
    Topic :: Office/Business
    Topic :: Scientific/Engineering

[options]
packages =
    nodezator
    nodezator.alphamask
    nodezator.classes2d
    nodezator.colorsman
    nodezator.colorsman.editor
    nodezator.colorsman.editor.panel
    nodezator.colorsman.editor.widgetsetup
    nodezator.colorsman.picker
    nodezator.colorsman.viewer
    nodezator.colorsman.viewer.modes
    nodezator.colorsman.viewer.modes.patterns
    nodezator.editing
    nodezator.editing.export
    nodezator.editing.export.form
    nodezator.editing.objpopups
    nodezator.editing.widgetpicker
    nodezator.editing.widgetpopups
    nodezator.fileman
    nodezator.fileman.bookmarkpanel
    nodezator.fileman.dirpanel
    nodezator.fontsman
    nodezator.fontsman.preview
    nodezator.fontsman.viewer
    nodezator.graphman
    nodezator.graphman.builtinnode
    nodezator.graphman.callablenode
    nodezator.graphman.callablenode.subparam
    nodezator.graphman.callablenode.vizop
    nodezator.graphman.callablenode.vizprep
    nodezator.graphman.callablenode.vizprep.bodysetup
    nodezator.graphman.capsulenode
    nodezator.graphman.operatornode
    nodezator.graphman.proxynode
    nodezator.graphman.proxynode.vizop
    nodezator.graphman.socket
    nodezator.graphman.socketparenthood
    nodezator.graphman.stlibnode
    nodezator.graphman.textblock
    nodezator.graphman.validation
    nodezator.graphman.widget
    nodezator.htsl
    nodezator.imagesman
    nodezator.imagesman.viewer
    nodezator.logman
    nodezator.loopman
    nodezator.menu
    nodezator.menu.submenu
    nodezator.our3rdlibs
    nodezator.our3rdlibs.grid
    nodezator.our3rdlibs.iterablewidget
    nodezator.our3rdlibs.sortingeditor
    nodezator.ourstdlibs
    nodezator.ourstdlibs.collections
    nodezator.ourstdlibs.collections.fldict
    nodezator.ourstdlibs.color
    nodezator.pointsman2d
    nodezator.rectsman
    nodezator.splashscreen
    nodezator.surfsman
    nodezator.syntaxman
    nodezator.syntaxman.syntaxes
    nodezator.syntaxman.syntaxes.python
    nodezator.textman
    nodezator.textman.editor
    nodezator.textman.editor.cursor
    nodezator.textman.editor.cursor.modes
    nodezator.textman.entryedition
    nodezator.textman.label
    nodezator.textman.viewer
    nodezator.userprefsman
    nodezator.videopreview
    nodezator.widget
    nodezator.widget.intfloatentry
    nodezator.widget.optionmenu
    nodezator.widget.optiontray
    nodezator.widget.pathpreview
    nodezator.winman
    nodezator.winman.nodepacksforms
    nodezator.winman.states
include_package_data = True
python_requires = >=3.6
install_requires =
    pygame
    numpy

[options.entry_points]
gui_scripts =
    nodezator = nodezator.__main__:main
