[metadata]
name = nodezator
version = 1.5.2
author = Kennedy Richard
author_email = kennedy@kennedyrichard.com
description = A generalist Python node editor
keywords = gui, desktop, application, pygame, pygame-ce, graph, graphs, nodes, node, editor
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://nodezator.com
project_urls =
    Source code = https://github.com/IndiePython/nodezator
    Forum = https://github.com/IndiePython/nodezator/discussions
    User manual = https://manual.nodezator.com
    Bug Tracker = https://github.com/IndiePython/nodezator/issues
    Donate = https://indiepython.com/donate
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Code Generators
    Topic :: Artistic Software
    Topic :: Desktop Environment
    Topic :: Multimedia
    Topic :: Office/Business
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pygame-ce
    numpy

[options.entry_points]
gui_scripts =
    nodezator = nodezator.__main__:parse_args_and_execute_main
